<resources>
    <string name="app_name">LeJeuDuPendu</string>
    <!--    ActionBar   -->
    <string name="action_settings">Settings</string>
    <string name="aide">Aide</string>
    <string name="jouer">JOUER</string>
    <!--    Home title -->
    <string name="homeTitle">Le Pendu</string>
    <!--    img body parts  -->
    <string name="gallows">The Gallows</string>
    <string name="rope">The Rope</string>
    <string name="head">The Head</string>
    <string name="arm">An Arm </string>
    <string name="body">The Body</string>
    <string name="leg">A Leg</string>
    <!--    gif homepage    -->
    <string name="hanging">The Hanging</string>
</resources>
