<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#FF000000"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:contetxt="com.example.lejeudupendu.GameActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_marginTop="0dp"
        android:background="?attr/colorPrimaryDark"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <!--    Zone pour l affichage des images du pendu  -->

    <RelativeLayout
        android:id="@+id/rl_imageContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="0dp"
        android:background="#FFFFFFFF"
        android:gravity="center"
        android:paddingTop="5dp"
        app:layout_constraintTop_toBottomOf="@+id/my_toolbar">

        <ImageView
            android:id="@+id/iv_gallows"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/gallows"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:src="@drawable/pendu_img1" />

        <ImageView
            android:id="@+id/iv_rope"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/rope"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:src="@drawable/pendu_img2" />

        <ImageView
            android:id="@+id/iv_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/head"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:src="@drawable/pendu_img3" />

        <ImageView
            android:id="@+id/iv_arm1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arm"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:src="@drawable/pendu_img4" />

        <ImageView
            android:id="@+id/iv_arm2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/arm"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:src="@drawable/pendu_img5" />

        <ImageView
            android:id="@+id/iv_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/body"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:src="@drawable/pendu_img6" />

        <ImageView
            android:id="@+id/iv_leg1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/leg"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:src="@drawable/pendu_img7" />

        <ImageView
            android:id="@+id/iv_leg2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/leg"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:src="@drawable/pendu_img8" />

    </RelativeLayout>

    <!--    Zonne d affichage du mot a trouver  -->

    <LinearLayout
        android:id="@+id/ll_word_container"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/wordContainer"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rl_imageContainer">

    </LinearLayout>

    <!--    Zone pour les lettres du clavier  -->

    <GridView
        android:id="@+id/keyboard"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:background="#FF000000"
        android:gravity="center"
        android:horizontalSpacing="5dp"
        android:numColumns="7"
        android:padding="5dp"
        android:stretchMode="columnWidth"
        android:verticalSpacing="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_word_container">

    </GridView>

</android.support.constraint.ConstraintLayout>